[package]
name = "rusty-grass"
authors = ["Mitsui <todays.mitsui@gmail.com>"]
description = "Grass interpreter written in Rust."
version = "0.1.0"
edition = "2024"

[[bin]]
name = "grass"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
combine = "4.6.7"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
